- Improvement: Show area slot of party contact in create/edit screens
- Refactor: Cleanup deprecated shift types

30.12.0 (27-10-2020)
- Improvement: Delete degree message more explicit when blocker are curricular plans 
- Improvement: Add method WeekDay.getDayOfWeek()
- Refactor: Cleanup SchoolClass slot names in portuguese 
- Refactor: Cleanup Shift slot names in portuguese
- Refactor: Cleanup Lesson slot names in portuguese
- Fix: Shift custom name predicate when course sigla has square brackets

30.11.1 (20-10-2020)
- Fix: Changed Person related entities to allow delete method execution

30.11.0 (14-10-2020)
- New Feature: Added Health Card Number to Person according #UL-FBA-1051

30.10.0 (13-10-2020)
- Fix: Root curricular period label displaying 'null' on child order
- Refactor: Remove teacher authorization departments to units migration on system init
- Refactor: Migrate SchoolClass slot names in portuguese to english
- Refactor: Migrate Shift slot names in portuguese to english
- Refactor: Migrate Lesson slot names in portuguese to english

30.9.4 (31-08-2020)
- Fix: Coordinator curricular year statistics should use execution year on computation

30.9.3 (14-08-2020)
- Improvement: Child execution interval should be created with the default state (not open)
- Improvement: Mark lesson instance as online

30.9.2 (11-08-2020)
- Refactor: Allow CreditsLimit rule subclassing

30.9.1 (07-08-2020)
- Fix: Unique acronym check should ignore blank values
- Fix: Add official unit setter with primitive boolean param

30.9.0 (06-08-2020)
- Improvement: Add AccountabilityType as UnitGroup argument (and deprecate AccountabilityTypeEnum)
- Improvement: Add code to AccountabilityType
- Refactor: Teacher authorizations for units, instead of departments
- Refactor: Cleanup deprecated DepartmentForum
- Refactor: Cleanup deprecated department argument in TeacherGroup
- Refactor: Cleanup deprecated Department and Teacher methods
- Fix: Fixed PermissionService objects provide
